--- a/Pure Mathematics.tex
+++ b/Pure Mathematics.tex
@@ -12,12 +12,15 @@
 	\subfile{"Algebra"}
 	\newpage
 	
+	\subfile{"Matrices"}
+	\pagebreak
+	\subfile{"LinearAlgebraOfPolynomials"}
+	\newpage
+	
 	\subfile{"Vector Spaces"}
 	\newpage
 	
-	\subfile{"Linear Algebra"}
-	\subfile{"LinearAlgebraOfPolynomials"}
-	\newpage
+	\subfile{"Linear Transformations"}
 	
 	\subfile{"Analysis"}
 \end{document}
