--- a/Vector Spaces.tex
+++ b/Vector Spaces.tex
@@ -334,7 +334,7 @@
 	\bigskip\bigskip
 	\searchableSubsection{Vector Space Problems}{vector problems}{\bigskip\bigskip}
 	
-	\searchable{subsubsection}{Prove that $-(-\v) = \v$ for every $\v \in V$}{vector problems}{
+	\paragraph{Prove that $-(-\v) = \v$ for every $\v \in V$}
 		\begin{align*}
 		 -(-\v) &= -[(-1)\v] &\sidecomment{using \autoref{prop:multiplication_by_minus_one}}\\
 		 		&= (-1)[(-1)\v] &\sidecomment{using \autoref{prop:multiplication_by_minus_one} again}\\
@@ -347,9 +347,8 @@
 		(-\v + \v) + -(-\v) &= \0 + \v &\sidecomment{adding $\v$ to both sides} \\
 		-(-\v) &= \v
 		\end{align*}
-	}
 	
-	\searchable{subsubsection}{Prove that if $a \in F, \v \in V$, and $a\v = \0$, then $a = 0$ or $\v = \0$.}{vector problems}{
+	\paragraph{Prove that if $a \in F, \v \in V$, and $a\v = \0$, then $a = 0$ or $\v = \0$.}
 		We follow a proof by cases.
 		\paragraph{Case $a \neq 0$:}
 		\begin{align*}	 	
@@ -376,34 +375,34 @@
 		&\iff & a - 1 &= -1 &\sidecomment{using injectivity of scalar multiplication} \\
 		&\iff & a &= 0. &\sidecomment{using field properties} \\
 		\end{align*}
-	}
+
 	
-	\searchable{subsubsection}{\small{Give an example of a nonempty subset $U$ of $\R2$ such that $U$ is closed under scalar multiplication but $U$ is not a subspace of $\R2$.}}{vector problems}{	
+	\paragraph{\small{Give an example of a nonempty subset $U$ of $\R2$ such that $U$ is closed under scalar multiplication but $U$ is not a subspace of $\R2$.}}	
 	For all $\lambda \in \R{}$ the set $\setc{\lambda\v}{\v \in \{(1,1) (-1,1)\} }$ is closed under scalar multiplication but not addition.
 	\begin{figure}[h!]
 	 \includegraphics[width=\linewidth]{resources/img/not_closed_under_addition.png}
 	 \caption{The blue arrows are vectors whose scalar multiples will all be in the same line as the blue arrows but the red arrow shows what happens if we add them; the result lies outside of both lines.}
 	\end{figure}
-	}
 	
-	\searchable{subsubsection}{Is $\R{2}$ a subspace of the complex vector space $\C{2}$?}{vector problems}{	
+	
+	\paragraph{Is $\R{2}$ a subspace of the complex vector space $\C{2}$?}	
 	The definition of a subspace of $\C{2}$ is a set of vectors which is a subset of those in $\C{2}$ and that forms a vector space under the same addition and scalar multiplication of $\C{2}$. The scalar multiplication of the vector space $\C{2}$ is multiplication by scalars $\lambda \in \C{}$.\\
 	For a vector, $\v \in \R{2}$, scaling it by a complex number, $\lambda\v$ will result in a vector that is not necessarily in $\R{2}$.
-	}
 	
-	\searchable{subsubsection}{Is $\setc{(a,b,c) \in \C{3}}{a^3 = b^3}$ a subspace of $\C{3}$?}{vector problems}{
+	
+	\paragraph{Is $\setc{(a,b,c) \in \C{3}}{a^3 = b^3}$ a subspace of $\C{3}$?}
 	For $x \in \C{}$, $x^3$ has roots, $1, \frac{-1 + \sqrt{3}i}{2}, \frac{-1 - \sqrt{3}i}{2}$ so we don't have $a = b$ as we would if we were ranging over the reals. \\
 	Concretely, we can have, $(1,\frac{-1 + \sqrt{3}i}{2},0)$ and $(1,\frac{-1 - \sqrt{3}i}{2},0)$ but,
 	\[ (1,\frac{-1 + \sqrt{3}i}{2},0) + (1,\frac{-1 - \sqrt{3}i}{2},0) = (2,-1,0) \]
 	where $(2,-1,0) \not\in \setc{(a,b,c) \in \C{3}}{a^3 = b^3}$ meaning that addition over this set is not closed. Therefore, this is not a subspace.
-	}
 	
-	\searchable{subsubsection}{\small{Give an example of a non-empty subset $U$ of $\R{2}$ such that $U$ is closed under addition and under taking additive inverses (meaning $-\u \in U$ whenever $\u \in U$), but $U$ is not a subspace of $\R{2}$.}}{vector problems}{
+	
+	\paragraph{\small{Give an example of a non-empty subset $U$ of $\R{2}$ such that $U$ is closed under addition and under taking additive inverses (meaning $-\u \in U$ whenever $\u \in U$), but $U$ is not a subspace of $\R{2}$.}}
 	First thought might be $\R{2} - \{\0\}$ but this is \wrong. If the subset is closed under addition and under taking additive inverses then it means that $\u + -\u = \0 \in U$ and so the set $\R{2} - \{\0\}$ is not closed under addition and taking additive inverses.\\
 	The set $\setc{(x,y) \in \R{2}}{x,y \in \Z{}}$ however, is closed under addition because integer addition is closed and under taking additive inverses but scalar multiplication where the scalars range over the reals, will produce non-integer values for $x$ and $y$.
-	}
+
 	
-	\searchable{subsubsection}{\small{Is the set of periodic functions over the reals a subspace of $\R{R}$?}}{vector problems, periodic functions}{
+	\paragraph{\small{Is the set of periodic functions over the reals a subspace of $\R{R}$?}}{vector problems, periodic functions}{
 	The definition of two periodic functions over the reals is
 		\begin{align*}		
 		\exists p > 0 \in \R{} \cdot f(x) &= f(x + p) \\
@@ -418,7 +417,7 @@
 		\end{align*}
 	}
 
-	\searchable{subsubsection}{\small{Prove that the union of two subspaces of $V$ is a subspace of $V$ if and only if one of the subspaces is contained within the other.}}{vector problems}{
+	\paragraph{\small{Prove that the union of two subspaces of $V$ is a subspace of $V$ if and only if one of the subspaces is contained within the other.}}
 		Let $A, B$ be subspaces of $V$ and $\V{a} \in A,\; \V{b} \in B$ and, 
 			\[ C = A \cup B = \setc{\V{c}}{\V{c} \in A \;\vee\; \V{c} \in B}. \]
 		Since $\V{a},\V{b} \in C$ we have $\text{(C subspace of V)} \iff \forall\alpha,\beta \in F \,\cdot\, (\alpha\V{a} + \beta\V{b}) \in C$. Then,
@@ -437,9 +436,9 @@
 		&\iff (\V{b} \in A) \vee (\V{a} \in B)\\
 		&\equiv (B \subseteq A) \vee (A \subseteq B).
 		\end{align*}
-	}
 	
-	\searchable{subsubsection}{\small{Can a vector space over an infinite field be a finite union of proper subspaces?}}{vector problems}{
+	
+	\paragraph{\small{Can a vector space over an infinite field be a finite union of proper subspaces?}}
 		Assume that our vector space V is a finite union of proper subspaces, hence
 		\[ V=\bigcup_{i=1}^n U_i. \]
 		Now, pick a non-zero vector $ \V{x} \in U_1 $, and pick another vector $ \V{y} \in V\,\backslash U_1. $\\
@@ -459,14 +458,14 @@
 		\[ V=\bigcup_{i=2}^n U_i. \]
 		
 		Evidently, this can be continued, hence a contradiction arises.\\
-	}
+
 	
-	\searchable{subsubsection}{\small{Prove or give a counterexample: if $U_1, U_2, W$ are subspaces of $V$ such that $ V = U_1 \oplus W \text{ and } V = U_2 \oplus W $ then $U_1 = U_2$.}}{vector problems}{
+	\paragraph{\small{Prove or give a counterexample: if $U_1, U_2, W$ are subspaces of $V$ such that $ V = U_1 \oplus W \text{ and } V = U_2 \oplus W $ then $U_1 = U_2$.}}
 		Counter example: $V = \F{2}, \; U_1 = \setc{(x, 0) \in \F{2}}{x \in F}, \; U_2 = \setc{(0, x) \in \F{2}}{x \in F}, \; W = \setc{(x, x) \in \F{2}}{x \in F}$.
-	}
+
 	
 	\bigskip
-	\searchable{subsubsection}{\small{Let $U_e$ denote the set of real-valued even functions on $\R{}$ and let $U_o$ denote the set of real-valued odd functions on $\R{}$. Show that $\R{R} = U_e \oplus U_o.$}}{vector problems}{
+	\paragraph{\small{Let $U_e$ denote the set of real-valued even functions on $\R{}$ and let $U_o$ denote the set of real-valued odd functions on $\R{}$. Show that $\R{R} = U_e \oplus U_o.$}}
 		Every function $f \in \R{R}$ can be expressed as the sum of an even function and an odd function as,
 		\[ f(x) = \frac{f(x) + f(-x)}{2} + \frac{f(x) - f(-x)}{2} = g(x) + h(x) \]
 	where $g(x) \in U_e$ and $h(x) \in U_o$. So, $U_e + U_o$ spans $\R{R}$.\\
@@ -477,7 +476,6 @@
 	&\implies f(x) = 0
 	\end{align*}
 	Since $f(x) = 0$ is the additive identity of this space, this shows that the intersection is $ \0 $. So, $\R{R} = U_e \oplus U_o.$
-	}
 
 
 	
@@ -597,6 +595,7 @@
 	\boxeddefinition{A \textbf{basis} for a vector space $V$ is a set of vectors that is both linearly independent and spans the space $V$. The empty set is therefore a basis for the zero vector space $\{\0\}$.\\
 	Since a basis of $V$ spans the space, any vector in $V$ may be expressed as as a linear combination of the vectors in the basis set and, since the basis set is linearly independent, this expression is unique.
 	}
+	\smallskip\note{Compare with the \textbf{generating set of a group} (\ref{def:generating_set_of_group}).}
 	
 	\bigskip
 	\labeledProposition{A set of vectors ${ B = \{\V{v_1}, \dots , \V{v_n}\} }$ in $V$ is a basis iff every ${ \w \in V }$ can be written in a single unique way as a linear combination of vectors in $B$.}{every_vector_in_space_is_unique_lin_comb_of_basis_vectors}
@@ -620,7 +619,7 @@
 			\note{Note that if the assumption of no relation between the elements of $S$ is not valid then $\phi$ may fail to be isomorphic.}
 			$V(S)$ is often referred to as \textit{the space with basis $S$} or \textit{the space of formal linear combinations of $S$}. If $S$ is an infinite set then $V(S)$ is defined to be the set of all \textit{finite} linear combinations of the elements of $S$.\\
 			This crops up frequently in applications, when taking weightings of different features for example; this isomorphism allows us to treat them as vectors in $\F{n}$.
-		}
+		}\label{ex:isomorphism_with_Fn}
 	\end{exe}
 
 	
@@ -926,7 +925,113 @@
 	\bigskip
 	\boxeddefinition{A \textbf{coordinate vector} is a representation of a vector as an ordered list of numbers that describes the vector in terms of a particular ordered basis.}
 	
+	\medskip\boxeddefinition{Let ${ B = \{\v_1, \dots, \v_n\} }$ be a basis of a finite-dimensional vector space $V$. Then for every ${ \v \in V }$ it is possible to express $\v$ as a linear combination of the vectors in $B$ in the form,
+		\[ \v = c_1\v_1 + \cdots + c_n\v_n. \]
+		Then, the \textbf{coordinate vector of $\v$ with respect to the basis $B$} is,
+		\[ \v_B = \langle c_1, \dots, c_n \rangle. \]
+	}
+	\boxeddefinition{The \textbf{dot product} of two coordinate vectors in an $n$-dimensional coordinate space is defined as,
+		\[ \v \dotprod \w = v_1w_1 + \cdots + v_nw_n = \v^T\w. \]
+	}
+
+	\notation{The \textbf{dot product} may also be denoted ${ \langle \v,\w \rangle }$ but this notation may also refer to a literal coordinate vector, i.e.
+		\[ \begin{bmatrix}3\\7\end{bmatrix} = \langle 3,7\rangle = (3,7)^T. \]
+	}
+
+	\bigskip
+	\labeledProposition{The properties of the dot product are:
+		\newcommand\vx{\V{x}}
+		\newcommand\vy{\V{y}}
+		\newcommand\vz{\V{z}}
+		\begin{enumerate}[label=(\roman*)]
+			\item{$\langle \vx, \vy \rangle = \langle \vy, \vx \rangle$}
+			\item{$\alpha\langle \vx, \vy \rangle = \langle \alpha \vx, \vy \rangle = \langle \vx, \alpha \vy \rangle$}
+			\item{$\langle \vx+\vy, \vz \rangle = \langle \vx, \vz \rangle + \langle \vy, \vz \rangle$}
+			\item{$\langle \vx, \vx \rangle \geq 0$ and $\langle \vx, \vx \rangle = 0 \iff \vx = 0$}
+		\end{enumerate}
+	}{properties_of_dot_product}
+	\begin{proof}
+		\newcommand\vx{\V{x}}
+		\newcommand\vy{\V{y}}
+		\newcommand\vz{\V{z}}
+		Proofs of these properties follow from the definition of the dot product.
+		\begin{enumerate}[label=(\roman*)]
+			\item{$\langle \vx, \vy \rangle = \langle \vy, \vx \rangle$ follows from the commutativity of multiplication in a field,
+				\[ x_iy_i = y_ix_i. \]
+			}
+			\item{$\alpha\langle \vx, \vy \rangle = \langle \alpha \vx, \vy \rangle = \langle \vx, \alpha \vy \rangle$ follows from the associativity of multiplication in a field, 
+				\[ \alpha x_i y_i = x_i \alpha y_i. \]
+			}
+			\item{$\langle \vx+\vy, \vz \rangle = \langle \vx, \vz \rangle + \langle \vy, \vz \rangle$ follows from the distributivity of multiplication over addition in a field,
+				\[ (x_i + y_i)z_i = x_iz_i + y_iz_i. \]
+			}
+			\item{$\langle \vx, \vx \rangle \geq 0$ and $\langle \vx, \vx \rangle = 0 \iff \vx = 0$ follows from its form as a sum of squares,
+				\[ x_1^2 + x_2^2 + \cdots + x_n^2. \]
+			}
+		\end{enumerate}
+	\end{proof}
+	
+	\bigskip
+	\subsubsection{Examples of coordinate vectors}
+	\begin{exe}
+		\ex{Let ${ \x = \langle 3, 3 \rangle \in \R{2} }$ and $B$ be the set ${ \{\langle 2, 0 \rangle, \langle 1, 3 \rangle\} }$ so that $B$ is a non-standard basis of the space $\R{2}$. Then we can also define $\x$ with respect to the basis $B$ as follows.
+			\[ \x =
+			1\cdot\begin{bmatrix}
+			2\\
+			0
+			\end{bmatrix} +
+			1\cdot\begin{bmatrix}
+			1\\
+			3
+			\end{bmatrix}
+			\]
+			Therefore, the \textbf{coordinate vector of $\x$ with respect to the basis $B$} is defined as,
+			\[ \x_B = \langle 1, 1 \rangle. \]
+		}
+	\end{exe}
+	
+
 	\medskip
+	\subsubsection{Bases as Matrices}
+	\medskip
+	\notation{If ${ B = \{\v_1, \dots, \v_n\} }$ is a set of vectors then, when it seems necessary to clearly differentiate, the matrix whose columns are the elements of $B$ will be denoted $[B]$. However, for convenience, when the mathematical context makes clear whether we are referring to a set of vectors or a matrix we will use $B$ to indicate either the set or the matrix.
+	}
+	
+	\medskip
+	\labeledProposition{If $\x_B$ is a coordinate vector of $\x$ \wrt the basis $B$ then left multiplication by the matrix $[B]$ whose columns are the elements of $B$ converts $\x_B$ to its standard coordinate form $\x$,
+		\[ \x = [B]\x_B. \]
+	}{left_multipy_coords_by_basis_gives_standard_coords}
+	\begin{proof}
+		Let ${ B = \{\v_1, \dots, \v_n\} }$ be a basis and the basis matrix
+		\[ [B] = \begin{bmatrix} \v_1 & \dots & \v_n \end{bmatrix} \]
+		and ${ \x = \langle x_1,\dots,x_n \rangle }$ is a vector in standard coordinates.
+		Then if we calculate $\x$ using the basis $B$,
+		\[ \x = x_{B1}\v_1 + \cdots + x_{Bn}\v_n \]
+		we get a coordinate vector \wrt $B$,
+		\[ \x_B = \langle x_{B1}, \dots, x_{Bn} \rangle. \]
+		So, clearly, to recover the standard coordinate vector we need to apply $\x_B$ to the basis against which it was defined,
+		\[ [B]\x_B = \begin{bmatrix} \v_1 & \dots & \v_n \end{bmatrix}
+					 \begin{bmatrix}  x_{B1} \\ \vdots \\ x_{Bn} \end{bmatrix} =
+					 x_{B1}\v_1 + \cdots + x_{Bn}\v_n = \x.  \qedhere
+		\]
+	\end{proof}
+	\begin{corollary}
+		If $\x$ is a coordinate vector \wrt the standard basis and $B$ is an alternative basis then left multiplication by the matrix $\inv{[B]}$ converts $\x$ to $\x_B$ its form \wrt the basis $B$.
+	\end{corollary}
+	\begin{proof}
+		\[ [B]\x_B = \x \iff \x_B = \inv{[B]}\x. \]
+	\end{proof}
+
+	\medskip
+	\note{One way to think of the action of the basis matrix is that it is used to encode/decode coordinates into/from its basis coordinates.\\
+		For example, if $\x_B$ is a coordinate vector \wrt the basis $B$, then left-multiplying it by the basis matrix $[B]$,
+		\[ \x = [B]\x_B \]
+		decodes the coordinate vector into standard coordinates. Conversely we can use the inverse of the basis matrix,
+		\[ \x_B = \inv{[B]}\x \]
+		to encode a standard coordinate vector into $B$-coordinates.
+	}
+	
+	\bigskip
 	\subsubsection{Relationship with Abstract Vector Spaces}
 	\medskip
 	\labeledProposition{Every vector space $V$ of dimension $n$ is isomorphic to the space $\F{n}$ of column vectors.}{vector_space_isomorphic_to_coordinate_space_of_same_dimension}
@@ -940,7 +1045,7 @@
 
 	\medskip
 	\note{Note that, by \autoref{prop:isomorphism_between_two_vector_spaces_implies_same_dimension}, $\F{n}$ is \textbf{not} isomorphic to $\F{m}$ for ${ m \neq n }$. Every finite-dimensional vector space $V$ is isomorphic to $\F{n}$, for some uniquely determined integer $n$.\\
-		So, the finite-dimensional vector spaces are completely classified by \autoref{prop:vector_space_isomorphic_to_coordinate_space_of_same_dimension} and any problem on vector spaces may be reduced to a problem on column vectors and matrices.
+		So, the finite-dimensional vector spaces are completely classified by \autoref{prop:vector_space_isomorphic_to_coordinate_space_of_same_dimension} and any problem on finite-dimensional vector spaces may be reduced to a problem on column vectors and matrices.
 	}
 	
 	\medskip
@@ -958,18 +1063,115 @@
 		where ${ \V{x} \in \F{n} }$ and $A$ is an ${ m \times n }$ matrix whose columns are the set of vectors. If there is a non-trivial solution --- a non-zero  $\V{x}$ for which ${ A\V{x} = \0 }$ --- then the set of vectors is not linearly independent.
 	
 	
-	\bigskip
+	\bigskip\bigskip
 	\subsubsection{Change of Basis}
 	\bigskip
+	\boxeddefinition{If we represent an abstract vector $\v$ as a coordinate vector with respect to two different bases ${ B = \{\b_1,\dots,\b_n\} }$ and ${ B' = \{\b'_1,\dots,\b'_n\} }$ then we have,
+	\[ \v = a_1\b_1 + \cdots + a_n\b_n = a'_1\b'_1 + \cdots + a'_n\b'_n. \]
+	Using the notation ${ \x_B = \langle a_1,\dots,a_n \rangle,\; \x_{B'} = \langle a'_1,\dots,a'_n \rangle }$ and letting ${ B,B' }$ from here on refer to the matrices whose columns are the elements of $B,B'$, we can rewrite the previous equation with matrices as,
+	\[ \v = B\x_B = B'\x_{B'}. \]
+	Then the \textbf{change of basis} from $B$ to $B'$ is the mapping,
+	\[ \x_{B'} = \inv{(B')}B\x_B = P\x_B. \]
+	So we have,
+	\[ \inv{(B')}B = P \iff B = B'P \]
+	which shows that $P$ is the mapping between the two bases. This is known as the \textbf{matrix of change of basis}.
+	}
+
+	\medskip\note{Note that another way to think about this is to say that $\x$ is the coordinate vector of $\v$ with respect to the standard basis and,
+		\[ \x = B\x_B = B'\x_{B'} \]
+		so we always use the standard basis as a reference.
+	}
+	
+	\bigskip
 	\labeledProposition{If ${ B \in \F{n \times n} }$ is a basis of a finite vector space $V$ then, for ${ P \in GL_n(\F{}) }$,
-		\[ BP = B' \]
+		\[ B\inv{P} = B' \]
 		is another basis of $V$.
 	}{invertible_matrix_transforms_one_basis_to_another}
 	\begin{proof}
-		As a member of $GL_n(\F{})$, $P$ is invertible and so ${ B'\inv{P} = B }$. It follows then that each of the basis vectors forming the columns of $B$ are in the span of the columns of $B'$ and so the columns of $B'$ must also span the space $V$. Furthermore, since we must also have ${ B' \in \F{n \times n} }$, there are $n$ columns in $B'$ and so they are a spanning set with cardinality equal to the set of columns of $B$ which is a basis of $V$. Therefore, by \autoref{theo:lin_ind_set_of_dim_cardinality_is_basis}, the columns of $B'$ are a basis of $V$.
+		As a member of $GL_n(\F{})$, $P$ is invertible and so is a bijective mapping. It follows then that each of the basis vectors forming the columns of $B$ are in the span of the columns of $B'$ and so the columns of $B'$ must also span the space $V$. Furthermore, since we must also have ${ B' \in \F{n \times n} }$, there are $n$ columns in $B'$ and so they are a spanning set with cardinality equal to the set of columns of $B$ which is a basis of $V$. Therefore, by \autoref{theo:lin_ind_set_of_dim_cardinality_is_basis}, the columns of $B'$ are a basis of $V$.
 	\end{proof}
 	
-	
+	\medskip
+	\subsubsection{Matrix of Change of Basis}
+	\boxeddefinition{Let ${ B,B' }$ be two different bases of the same space. Then, the matrix $P$ such that,
+		\[ B = B'P \eqand \x_{B'} = P\x_{B} \]
+		is known as the \textbf{matrix of change of basis} between $B$ and $B'$.
+	}
+	\medskip\note{The matrix of change of basis $P$ contains the vectors of one basis defined \wrt to the other basis. So,
+		\[ B = B'P \]
+		tells us that if we apply the coordinate vectors in $P$ to the basis $B'$ we get the basis vectors of $B$.\\
+		Conversely, if we have a coordinate vector $\x_B$ defined \wrt to $B$ and we treat $P$ as though it were a basis and apply the coordinate vector $\x_B$ to it,
+		\[ \x_{B'} = P\x_{B} \]
+		we get the same vector defined \wrt to the basis $B'$.
+	}
+
+	\bigskip\bigskip
+	\subsubsection{Euclidean Coordinate Spaces}
+	\bigskip
+	\boxeddefinition{The \textbf{Euclidean coordinate spaces} are the real coordinate spaces $\R{n}$ equipped with the \textbf{standard norm},
+		\[ \norm{\v} = \sqrt{v_1^2 + \cdots + v_n^2} \]
+		which is considered to be the \textbf{length} of the vector in the space $\R{n}$.
+	}
+
+	\note{\begin{itemize}
+			\item{The Euclidean norm (or standard norm) is the square root of the dot product of the vector with itself,
+				\[ \v \dotprod \v = v_1^2 + \cdots + v_n^2 = \norm{\v}^2. \]
+			}
+			\item{In a Euclidean coordinate space the metric (\href{https://en.wikipedia.org/wiki/Metric_(mathematics)}{wikipedia:metric}), or distance function, is the length of the vector between the two points considered to be position vectors in the corresponding Euclidean vector space. So, the distance $d$ between the point whose position vector is $\v$ and the point whose position vector is $\w$ is,
+				\[ d = \norm{\v - \w} = \norm{\w - \v}. \] 
+			}
+		\end{itemize}	
+	}
+
+	\bigskip
+	\labeledProposition{The dot product of two distinct vectors in a Euclidean space is related to their lengths by the formula,
+		\[ \v\dotprod\w =\norm\v \norm\w \cos{\theta} \]
+		where $\theta$ is the angle between the vectors.
+	}{dot_product_equals_product_of_lengths_and_angle}
+	\begin{proof}
+		The properties of the dot product (\autoref{prop:properties_of_dot_product}) tell us that,
+		\[ \v\dotprod\w = \w\dotprod\v \eqand (\v - \w)\dotprod\x = \v\dotprod\x - \w\dotprod\x \]
+		so if we let ${ \x = (\v - \w) }$ also we obtain,
+		\begin{align*}
+		(\v - \w)\dotprod(\v - \w) &= \v\dotprod(\v - \w) - \w\dotprod(\v - \w)  \\
+								   &= \v\dotprod\v - \v\dotprod\w - \w\dotprod\v + \w\dotprod\w \\
+								   &= \v\dotprod\v + \w\dotprod\w - 2\v\dotprod\w. 
+		\end{align*}
+		So this gives us a formula for the square of the length of the displacement vector between $\v$ and $\w$ or, in other words, the square of the distance between $\v$ and $\w$. Now, if we imagine $\v$ and $\w$ and the vector $\v - \w$ forming a triangle we can also refer to the law of cosines which tells us that,
+		\[ c^2 = a^2 + b^2 - 2ab\cos{\theta} \]
+		where $\theta$ is the angle subtended by $a$ and $b$ and $c$ is the side opposite the angle. Letting,
+		\[ a = \norm\v,\, b = \norm\w,\, c = \norm{\v - \w} \]
+		we obtain,
+		\[ \norm{\v - \w}^2 = \norm\v^2 + \norm\w^2 - 2\norm\v\norm\w\cos{\theta}. \]
+		But the Euclidean norm is the square root of the dot product so also,
+		\[ \norm{\v - \w}^2 = (\v - \w)\dotprod(\v - \w) \]
+		therefore
+		\begin{align*}
+		&&  \norm\v^2 + \norm\w^2 - 2\norm\v\norm\w\cos{\theta} &= \v\dotprod\v + \w\dotprod\w - 2\v\dotprod\w \\
+		&\iff & \norm\v^2 + \norm\w^2 - 2\norm\v\norm\w\cos{\theta} &= \norm\v^2 + \norm\w^2 - 2\v\dotprod\w \\
+		&\iff & - 2\norm\v\norm\w\cos{\theta} &= - 2\v\dotprod\w \\
+		&\iff & \norm\v\norm\w\cos{\theta} &= \v\dotprod\w. \qedhere \\
+		\end{align*}
+	\end{proof}
+
+	\medskip\note{This relationship is the foundation of analytic geometry.}
+
+	\bigskip
+	\subsubsection{Orthogonality}\label{sssection:orthogonality}
+	\boxeddefinition{Two nonzero vectors $\v$ and $\w$ are said to be \textbf{orthogonal} if their dot product is zero, i.e.
+		\[ \v\dotprod\w = 0. \]
+	}
+
+	\labeledTheorem{Two nonzero vectors $\v$ and $\w$ are perpendicular to each other if and only if their dot product is zero.}{zero_dot_product_iff_perpendicular}
+	\begin{proof}
+		If the dot product ${ \v\dotprod\w = 0 }$ then, by \autoref{prop:dot_product_equals_product_of_lengths_and_angle},
+		\[ \v\dotprod\w = \norm\v \norm\w \cos{\theta} = 0 \]
+		where $\theta$ is the angle between $\v$ and $\w$. Since $\v$ and $\w$ are both nonzero, the product of their lengths ${ \norm\v \norm\w > 0 }$. Then we must have ${ \cos{\theta} = 0 \iff \theta \in \{ \pi/2, 3\pi/2 \}  }$. So, ${ \v\dotprod\w = 0 }$ implies that the vectors are perpendicular.\\
+		Conversely, we can use the same logic in reverse to show that, for perpendicular vectors, ${ \cos{\theta} = 0 }$ which means that the dot product will be 0.
+	\end{proof}
+	\begin{corollary}
+		Geometric orthogonality --- that's to say perpendicularity --- is equivalent to the dot product definition of orthogonality.
+	\end{corollary}
 }
 	
 \end{document}
