--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -166,7 +166,7 @@
 
 \newcommand{\note}[1]{
 	\begin{tcolorbox}[breakable,enhanced jigsaw,colback=note_bg,boxrule=0pt,arc=0pt]
-	\noindent\parbox{\textwidth}{%
+	\noindent{%
 			{\small \textit{#1}}	
 		}
 	\end{tcolorbox}
